--- a/scss/main.css
+++ b/scss/main.css
@@ -246,7 +246,13 @@ body .content .modal button {
 body .content .modal.active {
   display: flex;
 }
-@media (max-width: 600px) {
+body footer {
+  margin-top: 10rem;
+  position: absolute;
+  bottom: 2rem;
+  left: 55%;
+}
+@media (max-width: 1100px) {
   body {
     flex-direction: column;
   }
@@ -294,5 +300,8 @@ body .content .modal.active {
   }
   body .content form {
     width: 85%;
+  }
+  body footer {
+    position: static;
   }
 }/*# sourceMappingURL=main.css.map */
