--- a/scss/main.scss
+++ b/scss/main.scss
@@ -53,6 +53,7 @@ body {
         pointer-events: none;
         width: 30%;
         background: url(../images/bg-main-desktop.png);
+        background-size: cover;
         .front, .back {
             width: 100%;
             max-width: 44.7rem;
